--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "less-loader": "^4.0.5",
     "mint-ui": "^2.2.13",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vux": "^2.7.9"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
